// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionNav renders 1`] = `
.emotion-4 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 1;
  min-width: 0;
  width: 256px;
  max-height: 100vh;
  overflow-x: visible;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: -webkit-transform .2s ease-out;
  -webkit-transition: transform .2s ease-out;
  transition: transform .2s ease-out;
  -webkit-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  background-color: background;
}

@media screen and (min-width:40em) {
  .emotion-4 {
    position: -webkit-sticky;
    position: sticky;
    bottom: auto;
    max-height: none;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    background-color: transparent;
  }
}

.emotion-3 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    className="emotion-4"
  >
    <ul
      className="emotion-3"
    >
      <li>
        <div
          className="emotion-0"
        >
          <a
            href="/"
          >
            Beep
          </a>
        </div>
      </li>
      <li>
        <div
          className="emotion-0"
        >
          <a
            href="/boop"
          >
            Boop
          </a>
        </div>
      </li>
      <li>
        <div
          className="emotion-0"
        >
          <a
            href="/bop"
          >
            Bop
          </a>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccordionNav renders open 1`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.emotion-7 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 1;
  min-width: 0;
  width: 256px;
  max-height: 100vh;
  overflow-x: visible;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: -webkit-transform .2s ease-out;
  -webkit-transition: transform .2s ease-out;
  transition: transform .2s ease-out;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  background-color: background;
}

@media screen and (min-width:40em) {
  .emotion-7 {
    position: -webkit-sticky;
    position: sticky;
    bottom: auto;
    max-height: none;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    background-color: transparent;
  }
}

.emotion-6 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  margin: 0;
  border: 0;
  border-radius: 0;
  color: inherit;
  background-color: transparent;
  margin-left: auto;
}

.emotion-4:hover,
.emotion-4:focus {
  color: primary;
}

.emotion-4:disabled {
  opacity: 0.25;
}

.emotion-3 {
  -webkit-transform-origin: 8 8;
  -ms-transform-origin: 8 8;
  transform-origin: 8 8;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
}

<div>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-7"
  >
    <ul
      className="emotion-6"
    >
      <li>
        <div
          className="emotion-1"
        >
          <a
            href="/"
          >
            Beep
          </a>
        </div>
      </li>
      <li>
        <div
          className="emotion-1"
        >
          <a
            href="/boop"
          >
            Boop
          </a>
        </div>
      </li>
      <li>
        <div
          className="emotion-1"
        >
          <a
            href="/bop"
          >
            Bop
          </a>
          <button
            className="emotion-4"
            disabled=""
            href="/bop"
            onClick={[Function]}
            pathname=""
            title="Expand Section"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <g
                className="emotion-3"
                transform="rotate(0 8 8)"
              >
                <path
                  d="M14 6 L8 12 L2 6"
                  fill="none"
                  stroke="currentcolor"
                  strokeWidth="2"
                />
              </g>
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccordionNav renders with nested links 1`] = `
.emotion-6 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 1;
  min-width: 0;
  width: 256px;
  max-height: 100vh;
  overflow-x: visible;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: -webkit-transform .2s ease-out;
  -webkit-transition: transform .2s ease-out;
  transition: transform .2s ease-out;
  -webkit-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  background-color: background;
}

@media screen and (min-width:40em) {
  .emotion-6 {
    position: -webkit-sticky;
    position: sticky;
    bottom: auto;
    max-height: none;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    background-color: transparent;
  }
}

.emotion-5 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  margin: 0;
  border: 0;
  border-radius: 0;
  color: inherit;
  background-color: transparent;
  margin-left: auto;
}

.emotion-3:hover,
.emotion-3:focus {
  color: primary;
}

.emotion-3:disabled {
  opacity: 0.25;
}

.emotion-2 {
  -webkit-transform-origin: 8 8;
  -ms-transform-origin: 8 8;
  transform-origin: 8 8;
  -webkit-transition: -webkit-transform .1s ease-out;
  -webkit-transition: transform .1s ease-out;
  transition: transform .1s ease-out;
}

<div>
  <div
    className="emotion-6"
  >
    <ul
      className="emotion-5"
    >
      <li>
        <div
          className="emotion-0"
        >
          <a
            href="/"
          >
            Beep
          </a>
        </div>
      </li>
      <li>
        <div
          className="emotion-0"
        >
          <a
            href="/boop"
          >
            Boop
          </a>
        </div>
      </li>
      <li>
        <div
          className="emotion-0"
        >
          <a
            href="/bop"
          >
            Bop
          </a>
          <button
            className="emotion-3"
            disabled=""
            href="/bop"
            onClick={[Function]}
            pathname=""
            title="Expand Section"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <g
                className="emotion-2"
                transform="rotate(0 8 8)"
              >
                <path
                  d="M14 6 L8 12 L2 6"
                  fill="none"
                  stroke="currentcolor"
                  strokeWidth="2"
                />
              </g>
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pagination renders 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  margin-left: auto;
  margin-right: auto;
}

.emotion-2 {
  font-size: 14px;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
}

.emotion-1 {
  font-size: 20px;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-0"
  />
  <a
    className="emotion-2"
    href="/boop"
  >
    <div>
      Next:
    </div>
    <div
      className="emotion-1"
    >
      Boop
    </div>
  </a>
</div>
`;

exports[`Sidenav renders 1`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 1;
  min-width: 0;
  width: 256px;
  max-height: 100vh;
  overflow-x: visible;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: -webkit-transform .2s ease-out;
  -webkit-transition: transform .2s ease-out;
  transition: transform .2s ease-out;
  -webkit-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  background-color: background;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    position: -webkit-sticky;
    position: sticky;
    bottom: auto;
    max-height: none;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    background-color: transparent;
  }
}

<div
  className="emotion-0"
>
  <ul>
    <li>
      <a
        href="/"
        mdxType="a"
      >
        Beep
      </a>
    </li>
    <li>
      <a
        href="/boop"
        mdxType="a"
      >
        Boop
      </a>
    </li>
    <li>
      <a
        href="/bop"
        mdxType="a"
      >
        Bop
      </a>
    </li>
  </ul>
</div>
`;

exports[`Sidenav renders open 1`] = `
Array [
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
    className="emotion-0"
  />,
  .emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 1;
  min-width: 0;
  width: 256px;
  max-height: 100vh;
  overflow-x: visible;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: -webkit-transform .2s ease-out;
  -webkit-transition: transform .2s ease-out;
  transition: transform .2s ease-out;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  background-color: background;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    position: -webkit-sticky;
    position: sticky;
    bottom: auto;
    max-height: none;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    background-color: transparent;
  }
}

<div
    className="emotion-0"
  >
    <ul>
      <li>
        <a
          href="/"
          mdxType="a"
        >
          Beep
        </a>
      </li>
      <li>
        <a
          href="/boop"
          mdxType="a"
        >
          Boop
        </a>
      </li>
      <li>
        <a
          href="/bop"
          mdxType="a"
        >
          Bop
        </a>
      </li>
    </ul>
  </div>,
]
`;
